Tweaked the CSS to stop stretching of images on the feed below the main poster.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,14 +59,13 @@ h1,h3 {
   padding-top: 25px;
   .poster {
     padding-top: 25px;
+    height: 450px;
     .icon {
-      max-width: 100%;
-      height: 250px;
+      max-height: 300px;
       margin-right: auto;
       margin-left: auto;
     }
     .poster-text {
-      height: 80px;
     }
   }
 }
